<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_marginBottom="10dp"
    android:backgroundTint="@color/grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/wonderImage"
            android:layout_width="225dp"
            android:layout_height="225dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="-10dp"
            android:contentDescription="@string/image_of_one_of_the_seven_wonders_of_the_world"
            android:padding="2dp" />

        <TextView
            android:id="@+id/wonderName"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-210dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/wonderImage"
            android:text="@string/place"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/wonderDescription"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_below="@+id/wonderName"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-27dp"
            android:layout_toEndOf="@+id/wonderImage"
            android:textColor="@color/white"
            android:text="@string/description"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/clickLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginBottom="45dp"
            android:text="@string/clickLink"
            android:textColor="@color/white"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:autoLink="web"
            android:text="@string/LocationLink"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/mapImage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="173dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/mappindark"
            android:contentDescription="@string/map_pin_vector" />

        <ImageView
            android:id="@+id/linkImage"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="190dp"
            android:layout_marginBottom="0dp"
            android:src="@drawable/sharedark"
            android:contentDescription="@string/link_vector"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>